--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -110,13 +110,13 @@
     <section style="background-image:none;color:black;display:flex; flex-basis:100%;">
         <div class="sponsorspage">
 
-            <div class="announcement">
+            <div class="announcement" style="display: none;">
                 <h2 style="text-align: center;">
                  Yakında duyurulacak!
                 </h2>
             </div>
 
-            <div class="sponsorscolumns"  style="display:none">
+            <div class="sponsorscolumns"  style="display:none;">
                 <div class="sponsorcoltitle">
                     Ana Sponsor
                 </div>
@@ -148,15 +148,11 @@
 
 
                     <div class="sponsorimgcontainer">
-                        <a href="https://www.getmidas.com/">
-                        <img src="../assets/partners/midas.png" width="80%" alt="midas">
+                        <a href="https://useinsider.com/">
+                        <img src="../assets/partners/insider.png" width="80%" alt="insider">
                         </a>
                     </div>
-                    <div class="sponsorimgcontainer">
-                        <a href="https://www.fordotosan.com.tr/tr">
-                        <img src="../assets/partners/fordspo.png" width="85%" alt="Ford Otosan">
-                        </a>
-                    </div>
+        
 
                 </div>
             </div>
