--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -140,7 +140,7 @@
 
                 </div>
             </div>
-            <div class="sponsorscolumns" style="display:none">
+            <div class="sponsorscolumns">
                 <div class="sponsorcoltitle">
                     Altın Sponsor
                 </div>
