--- a/index.html
+++ b/index.html
@@ -215,8 +215,7 @@
           <h2 style="text-align:center; font-size: 36px; margin-top:72px; margin-bottom:32px;">Yer - Tarih</h2>
                 <p style="text-align:center;font-size: 24px; line-height: 24px;">
 
-                    30 & 31 Ekim Workshop : Online<br><br>
-                    1 & 2 Kasım Datathon : Online<br><br>
+                    1 & 2 Kasım Workshop : Online<br><br>
                     3 Kasım Zirve : Boğaziçi Üniversitesi Güney Kampüs
                     <br>Albert Long Hall (Saatli Bina)<br>
                  
@@ -225,7 +224,7 @@
         
       </section>
    
-    <section id="gallery">
+    <section id="gallery" style="display: none;">
         <div class="container-wide">
             <h2>Geçtiğimiz Seneden Fotoğraflar</h2>
         </div>
