--- a/program/index.html
+++ b/program/index.html
@@ -399,7 +399,7 @@
                     <div class="event-card-bottom">
                       <div class="event-card-profile-card">
                         <div class="event-card-profile">
-                          <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/sercancayır.png" alt="Sercan Çayır">
+                          <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/sercancayir.png" alt="Sercan Çayır">
                         </div>
                         <div class="event-card-about">
                           <p class="event-card-name">Sercan Çayır</p>
@@ -1349,7 +1349,7 @@
                 </div>
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
+                    <h3 class="event-card-heading">Veriyi Konuşturabilen Metod Mu, Bakış Açısı Mı?</h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -1374,14 +1374,14 @@
                   </div>
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
-                      <div class="event-card-profile" style="display: none;">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/" alt="">
+                      <div class="event-card-profile">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/didemgundogdu.png" alt="">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name"></p>
+                        <p class="event-card-name">Didem Gündoğdu</p>
                         <div class="event-card-title">
-                          <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-position">Data Scientist</p>
+                          <p class="event-card-company">Boğaziçi University</p>
                         </div>
                       </div>
                     </div>
