--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -129,13 +129,13 @@
 
                 </div>
             </div>
-            <div class="sponsorscolumns"  style="display:none">
+            <div class="sponsorscolumns">
                 <div class="sponsorcoltitle">
                     Platin Sponsor
                 </div>
                 <div class="sponsorcolimgs">
                     <div class="sponsorimgcontainer">
-                        <img src="../assets/partners/artiwisespo.png" alt="Artiwise">
+                        <img src="../assets/partners/plusminusone.png" alt="Plus Minus One">
                     </div>
 
                 </div>
