--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="sponsorcolimgs">
                     <div class="sponsorimgcontainer">
-                        <img src="../assets/partners/plusminusone.png" alt="Plus Minus One">
+                        <img src="../assets/partners/plusminusone.png" width="60%" alt="Plus Minus One">
                     </div>
 
                 </div>
@@ -149,7 +149,7 @@
 
                     <div class="sponsorimgcontainer">
                         <a href="https://useinsider.com/">
-                        <img src="../assets/partners/insider.png" width="80%" alt="insider">
+                        <img src="../assets/partners/insider.png" width="60%" alt="insider">
                         </a>
                     </div>
         
