--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -157,57 +157,36 @@
                 </div>
             </div>
 
-            <div class="sponsorscolumns" style="display:none" >
+            <div class="sponsorscolumns">
                 <div class="sponsorcoltitle">
                     Okul Kulüpleri
                 </div>
                 <div class="sponsorcolimgs">
                     <div class="sponsorimgcontainer">
-                        <a href="https://www.instagram.com/rgbtasarimkulubu/">
-                        <img src="../assets/partners/2022/kulupler/rgb_tasarim_kulubu.png" width="50%" alt="RGB Tasarım Kulübü">
+                        <a href="https://www.instagram.com/ku.airs/">
+                        <img src="../assets/partners/koçairs.png" width="40%" alt="Koç Airs">
                         </a>
                     </div>
                     <div class="sponsorimgcontainer">
-                        <a href="http://www.gsumk.com">
-                        <img src="../assets/partners/2022/kulupler/gsumk.png" width="40%" alt="GSÜ Mühendislik Kulübü">
+                        <a href="https://www.instagram.com/kuacm/">
+                        <img src="../assets/partners/koç.png" width="40%" alt="Koç ACM">
                         </a>
                     </div>
                     <div class="sponsorimgcontainer">
                         <a href="http://www.bt.sakarya.edu.tr">
-                        <img src="../assets/partners/2022/kulupler/sakaryabt.png" width="40%" alt="Sakarya Üniversitesi Bilgisayar Topluluğu">
+                        <img src="../assets/partners/sakarya.png" width="40%" alt="Sakarya Üniversitesi Bilgisayar Topluluğu">
                         </a>
                     </div>
                     <div class="sponsorimgcontainer">
-                        <a href="https://www.instagram.com/techno_vasyon/">
-                        <img src="../assets/partners/2022/kulupler/uskudar-tk.jpeg" width="40%" alt="Üsküdar Üniversitesi Teknoloji Kulübü">
+                        <a href="https://www.instagram.com/macsecommunity/">
+                        <img src="../assets/partners/marmaraklüp.png" width="40%" alt="Marmara Bilgisayar Mühendisliği Kulübü">
                         </a>
                     </div>
                     <div class="sponsorimgcontainer">
-                        <a href="https://www.instagram.com/ieee.comu/">
-                        <img src="../assets/partners/2022/kulupler/comuieee.png" width="80%" alt="IEEE ÇOMÜ Öğrenci Kolu">
+                        <a href="https://www.beykoz.edu.tr/icerik/2672-yazilim-muhendisligi-kulubu">
+                        <img src="../assets/partners/beykozyzl.png" width="40%" alt="Beykoz Üniversitesi Yazılım Mühendisliği Kulübü">
                         </a>
                     </div>
-                    <div class="sponsorimgcontainer">
-                        <a href="https://linktr.ee/beykozuniyazilim">
-                        <img src="../assets/partners/2022/kulupler/beykozyazilim.png" width="40%" alt="Beykoz Üniversitesi Yazılım Kulübü">
-                        </a>
-                    </div>
-                    <div class="sponsorimgcontainer">
-                        <a href="https://linktr.ee/beykentbmk">
-                        <img src="../assets/partners/2022/kulupler/beykentbmk.jpg" width="40%" alt="Beykent Üniversitesi Bilgisayar Mühendisliği Kulübü">
-                        </a>
-                    </div>
-                    <div class="sponsorimgcontainer">
-                        <a href="https://www.instagram.com/ituaiclub/">
-                        <img src="../assets/partners/2022/kulupler/ituaiclub.jpg" width="40%" alt="İTÜ Yapay Zeka Kulübü">
-                        </a>
-                    </div>
-                    <div class="sponsorimgcontainer">
-                        <a href="https://biolinky.co/buyabi">
-                        <img src="../assets/partners/2022/kulupler/buyabi.jpg" width="40%" alt="Bahçeşehir Üniversitesi Yazılım ve Bilişim Kulübü">
-                        </a>
-                    </div>
-
                 </div>
             </div>
             <div class="sponsorscolumns" style="display:none">
