--- a/sponsorlar/index.html
+++ b/sponsorlar/index.html
@@ -187,6 +187,16 @@
                         <img src="../assets/partners/beykozyzl.png" width="40%" alt="Beykoz Üniversitesi Yazılım Mühendisliği Kulübü">
                         </a>
                     </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://www.instagram.com/doubilisim/">
+                        <img src="../assets/partners/dogusuni.png" width="40%" alt="Doğuş Üniversitesi Bilişim Kulübü">
+                        </a>
+                    </div>
+                    <div class="sponsorimgcontainer">
+                        <a href="https://www.instagram.com/sauvbt/">
+                        <img src="../assets/partners/sakaryaveribilimi.png" width="40%" alt="Sakarya Üniversitesi Veri Bilimi Topluluğu">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="sponsorscolumns" style="display:none">
