--- a/program/index.html
+++ b/program/index.html
@@ -417,7 +417,7 @@
               <div class="day-card-row">
                 <div class="event-card">
                     <div class="event-card-top">
-                      <h3 class="event-card-heading">TBA</h3>
+                      <h3 class="event-card-heading">MediaPipe Kütüphanesi ile Aksiyon Analizine Giriş</h3>
                       <p class="event-card-desc"></p>
                       <div class="event-card-details">
                         <div class="event-card-details-element">
@@ -441,15 +441,15 @@
                       </div>
                     </div>
                     <div class="event-card-bottom">
-                      <div class="event-card-profile-card" style="display: none;">
+                      <div class="event-card-profile-card">
                         <div class="event-card-profile">
-                          <img class="event-card-pp" height="181px" width="139px" src="../assets/datathon/alperen-yildirim.jpeg" alt="Alperen Yıldırım">
+                          <img class="event-card-pp" height="181px" width="139px" src="../assets/partners/karacansahin.png" alt="Karahan Şahin">
                         </div>
                         <div class="event-card-about">
-                          <p class="event-card-name">Alperen Yıldırım</p>
+                          <p class="event-card-name">Karahan Şahin</p>
                           <div class="event-card-title">
-                            <p class="event-card-position">Data Science Lead</p>
-                            <p class="event-card-company">Fugo Games</p>
+                            <p class="event-card-position">Research Engineer</p>
+                            <p class="event-card-company"></p>
                           </div>
                         </div>
                       </div>
