yeni konuşmacılar eklendi

--- a/program/index.html
+++ b/program/index.html
@@ -1167,7 +1167,7 @@
 
                 <div class="event-card">
                   <div class="event-card-top">
-                    <h3 class="event-card-heading">TBA</h3>
+                    <h3 class="event-card-heading">İşe Alımda Yapay Zeka: Developer İşe Alımında Veriye Dayalı Karar Alma</h3>
                     <p class="event-card-desc"></p>
                     <div class="event-card-details">
                       <div class="event-card-details-element">
@@ -1192,14 +1192,26 @@
                   </div>
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
-                      <div class="event-card-profile" style="display: none;">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/datathon/" alt="">
+                      <div class="event-card-profile">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/barısbarsan.png" alt="Barış Borsan">
                       </div>
-                      <div class="event-card-about" style="display: none;">
-                        <p class="event-card-name"></p>
+                      <div class="event-card-about">
+                        <p class="event-card-name">Barış Borsan</p>
                         <div class="event-card-title" >
-                          <p class="event-card-position"></p>
-                          <p class="event-card-company"></p>
+                          <p class="event-card-position">Product Director</p>
+                          <p class="event-card-company">Anytime</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="event-card-profile-card">
+                      <div class="event-card-profile" >
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/eneskok.png" alt="Enes Kök">
+                      </div>
+                      <div class="event-card-about">
+                        <p class="event-card-name">Enes Kök</p>
+                        <div class="event-card-title" >
+                          <p class="event-card-position">Co-Founder</p>
+                          <p class="event-card-company">Hiri.ai</p>
                         </div>
                       </div>
                     </div>
