--- a/program/index.html
+++ b/program/index.html
@@ -1193,10 +1193,10 @@
                   <div class="event-card-bottom">
                     <div class="event-card-profile-card">
                       <div class="event-card-profile">
-                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/barısbarsan.png" alt="Barış Borsan">
+                        <img class="event-card-pp" height="181px" width="139px" src="../assets/konusmacilar/barısbarsan.png" alt="Barış Barsan">
                       </div>
                       <div class="event-card-about">
-                        <p class="event-card-name">Barış Borsan</p>
+                        <p class="event-card-name">Barış Barsan</p>
                         <div class="event-card-title" >
                           <p class="event-card-position">Product Director</p>
                           <p class="event-card-company">Anytime</p>
