--- a/program/index.html
+++ b/program/index.html
@@ -1679,8 +1679,7 @@
         </a>
         <p>
           <p style="font-size: 14px
-        ; line-height: 20px">© 2024Prove that there are 100 consecutive positive integers that are not perfect
-squares. Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
+        ; line-height: 20px">© 2024 Boğaziçi Üniversitesi Bilişim Kulübü (Compec) Tüm hakkı saklıdır® <br>Etkinliğin tüm hakları Compec'e aittir ve etkinliği haber vermeksizin değiştirme yetkisini elinde tutar. </p>
         </p>
       </div>
     </footer>
