geçmiş yıllara yönlendirme şimdilik kapatıldı

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <!-- <a href="#about" data-scroll data-type="navItem" class="animated fast fadeOut active">Bilgi</a> -->
 
 
-                <a href="https://www.biletimgo.com/etkinlik/bogazici-datacamp24-8245" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
+                <a href="https://www.biletimgo.com/etkinlik/bogazici-datacamp25-19841" data-type="navItem" class="animated fast fadeOut" target="_blank">Kayıt ol!</a>
 
                 <a style=""href="../program" data-type="navItem" class="animated fast fadeOut">Program</a>
                 <a href="../sss" data-type="navItem" class="animated fast fadeOut">SSS</a>
@@ -247,9 +247,9 @@
             -->
             <div class="team-container clearfix text-break">
                 <div class="team-member">
-                    <div class="image">
+                <!--    <div class="image">
                         <img src="assets/team/berre.jpg" alt="Berre">
-                    </div>
+                    </div> -->
                     <div class="text">
                         <strong>Havva Berre Yılmaz</strong> <br>
                         <em>DataCamp Proje Direktörü</em> <br>
@@ -258,9 +258,9 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <div class="image">
-                        <img src="assets/team/halil.jpg" alt="Halil Bilgehan Arı">
-                    </div>
+            <!--    <div class="image">
+                        <img src="assets/team/berre.jpg" alt="Berre">
+                    </div> -->
                     <div class="text">
                         <strong>Halil Bilgehan Arı</strong> <br>
                         <em>DataCamp Proje Lideri</em> <br>
@@ -269,10 +269,11 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <div class="image">
-                        <img src="assets/team/ibrahim.jpg" alt="İbrahim Koçyiğit">
-                    </div>
+            <!--    <div class="image">
+                        <img src="assets/team/berre.jpg" alt="Berre">
+                    </div> -->
                     <div class="text">
+
                         <strong>İbrahim Koçyiğit</strong> <br>
                         <em>DataCamp Proje Lideri</em> <br>
                         <a class="mailFont" href="mailto:ibrahim.kocyigit@leader.compec.org" target="_top">ibrahim.kocyigit@leader.compec.org</a> <br>
