--- a/program/index.html
+++ b/program/index.html
@@ -54,7 +54,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500&display=swap" rel="stylesheet">
-    <title> Boğaziçi DataCamp '24 </title>
+    <title> Boğaziçi DataCamp'25 </title>
     <meta charset="UTF-8">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128963962-1"></script>
     <script>
@@ -230,8 +230,8 @@
                 </tr>
                 <tr style="background-color: #ffffff;">
                   <td style="padding: 12px;">Weighted Nearest Centroid Estimator (WNCE)</td>
-                  <td style="padding: 12px;">Gursel Karaçor</td>
-                  <td style="padding: 12px;">Akademisyen</td>
+                  <td style="padding: 12px;">Gursel Karaçor - Akademisyen</td>
+                  <td style="padding: 12px;">Fenerbahçe Üniversitesi</td>
                   <td style="padding: 12px;">saat - saat</td>
                   <td style="padding: 12px;">Güney Kampüs, ALH</td>
                 </tr><tr style="background-color: #ffffff;">
@@ -247,14 +247,6 @@
                   <td style="padding: 12px;">saat - saat</td>
                   <td style="padding: 12px;">Güney Kampüs, ALH</td>
                 </tr>
-
-              </tr><tr style="background-color: #ffffff;">
-                <td style="padding: 12px;">Yazılım Geliştiriciler İçin AI</td>
-                <td style="padding: 12px;">Alper Hakendi - Head of Technology</td>
-                <td style="padding: 12px;">HEPSIBURADA</td>
-                <td style="padding: 12px;">saat - saat</td>
-                <td style="padding: 12px;">Güney Kampüs, ALH</td>
-              </tr>
 
             </tr><tr style="background-color: #ffffff;">
               <td style="padding: 12px;">Eğitim ve Yapay Zeka</td>
@@ -273,8 +265,8 @@
 
         </tr><tr style="background-color: #ffffff;">
           <td style="padding: 12px;">Yapay Zeka Çağında Dijital Girişimler</td>
-          <td style="padding: 12px;">Enes Karataş</td>
-          <td style="padding: 12px;">Founding Engineer</td>
+          <td style="padding: 12px;">Enes Karataş - Founding Engineer</td>
+          <td style="padding: 12px;">UPSONIC</td>
           <td style="padding: 12px;">saat - saat</td>
           <td style="padding: 12px;">Güney Kampüs, ALH</td>
         </tr>            
