biletimgo linkleri eklendi

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </p>
                         <div class="btn btn-primary" style="padding-top: 18px; margin-top:18px;padding-right: 0px; padding-bottom: 18px; padding-left: 0px; font-size: 24px; font-weight: 500; line-height: 29px; letter-spacing: 0px; text-align: left; border:none;">
                             <a style="padding-top: 22.5px;padding-right: 72px; padding-bottom: 22.5px; padding-left: 72px;color: white;font-size: 2.4vh; font-family: inherit;
-" href="gelecek" target="_blank">Kayıt Ol!</a>
+" href="https://www.biletimgo.com/etkinlik/bogazici-datacamp25-19841" target="_blank">Kayıt Ol!</a>
                             
                         </div>
                         <div class="btn btn-primary" style="padding-top: 18px; margin-top:18px;padding-right: 0px; padding-bottom: 18px; padding-left: 0px; font-size: 24px; font-weight: 500; line-height: 29px; letter-spacing: 0px; text-align: left; border:none;">
