--- a/program/index.html
+++ b/program/index.html
@@ -148,9 +148,9 @@
                   <td style="padding: 12px;">Online</td>
                 </tr>
                 <tr style="background-color: #ecf0f1;">
-                  <td style="padding: 12px;">TBA</td>
-                  <td style="padding: 12px;">TBA</td>
-                  <td style="padding: 12px;">TBA</td>
+                  <td style="padding: 12px;">"İnsanlık tarinin en önemli paradigma değişimi: Yapay Zeka!”</td>
+                  <td style="padding: 12px;">Yeşim Özsöz</td>
+                  <td style="padding: 12px;">MADLEN</td>
                   <td style="padding: 12px;">19.30 - 21.00</td>
                   <td style="padding: 12px;">Online</td>
                 </tr>
@@ -221,55 +221,72 @@
                 </tr>
               </thead>
               <tbody>
-                <tr style="background-color: #ffffff;">
-                  <td style="padding: 12px;">LLM’lerin Güçlü ve Zayıf Yönleri</td>
-                  <td style="padding: 12px;">Ahmet Erdem - Senior LLM Technologist</td>
-                  <td style="padding: 12px;">NVIDIA</td>
-                  <td style="padding: 12px;">saat - saat</td>
-                  <td style="padding: 12px;">Güney Kampüs, ALH</td>
-                </tr>
-                <tr style="background-color: #ffffff;">
-                  <td style="padding: 12px;">Weighted Nearest Centroid Estimator (WNCE)</td>
-                  <td style="padding: 12px;">Gursel Karaçor - Akademisyen</td>
-                  <td style="padding: 12px;">Fenerbahçe Üniversitesi</td>
-                  <td style="padding: 12px;">saat - saat</td>
-                  <td style="padding: 12px;">Güney Kampüs, ALH</td>
-                </tr><tr style="background-color: #ffffff;">
-                  <td style="padding: 12px;">Cloud ve Veri</td>
-                  <td style="padding: 12px;">Mutlu Polatcan - Software Engineer</td>
-                  <td style="padding: 12px;">INSIDER</td>
-                  <td style="padding: 12px;">saat - saat</td>
-                  <td style="padding: 12px;">Güney Kampüs, ALH</td>
-                </tr><tr style="background-color: #ffffff;">
-                  <td style="padding: 12px;">Yazılım Geliştiriciler İçin AI</td>
-                  <td style="padding: 12px;">Alper Hakendi - Head of Technology</td>
-                  <td style="padding: 12px;">HEPSIBURADA</td>
-                  <td style="padding: 12px;">saat - saat</td>
-                  <td style="padding: 12px;">Güney Kampüs, ALH</td>
-                </tr>
-
+              </tr><tr style="background-color: #ffffff;">
+                <td style="padding: 12px;">AÇILIŞ KONUŞMASI</td>
+                <td style="padding: 12px;">-</td>
+                <td style="padding: 12px;">-</td>
+                <td style="padding: 12px;">10:00 - 10:15</td>
+                <td style="padding: 12px;">Güney Kampüs, ALH</td>
+              </tr>
+              </tr><tr style="background-color: #ffffff;">
+                <td style="padding: 12px;">"İnsanlık tarinin en önemli paradigma değişimi: Yapay Zeka!”</td>
+                <td style="padding: 12px;">Atakan Özkaya - Founder</td>
+                <td style="padding: 12px;">MADLEN</td>
+                <td style="padding: 12px;">10:15 - 10:55</td>
+                <td style="padding: 12px;">Güney Kampüs, ALH</td>
+              </tr>
             </tr><tr style="background-color: #ffffff;">
-              <td style="padding: 12px;">Eğitim ve Yapay Zeka</td>
-              <td style="padding: 12px;">Atakan Özkaya - Founder</td>
-              <td style="padding: 12px;">MADLEN</td>
-              <td style="padding: 12px;">saat - saat</td>
+              <td style="padding: 12px;">"Yazılım Geliştiriciler İçin AI"</td>
+              <td style="padding: 12px;">Alper Hakendi - Head of Technology</td>
+              <td style="padding: 12px;">HEPSIBURADA</td>
+              <td style="padding: 12px;">10:55 - 11:35</td>
               <td style="padding: 12px;">Güney Kampüs, ALH</td>
             </tr>
-          </tr><tr style="background-color: #ffffff;">
-            <td style="padding: 12px;">Yapay Zekâ ve Hukuk</td>
+            <tr style="background-color: #ffffff;">
+              <td style="padding: 12px;">"Weighted Nearest Centroid Estimator (WNCE)"</td>
+              <td style="padding: 12px;">Gursel Karaçor - Akademisyen</td>
+              <td style="padding: 12px;">Fenerbahçe Üniversitesi</td>
+              <td style="padding: 12px;">12:00 - 12:40</td>
+              <td style="padding: 12px;">Güney Kampüs, ALH</td>
+            </tr>
+          </tr>
+          <tr style="background-color: #ffffff;">
+            <td style="padding: 12px;">"Yapay Zekâ ve Hukuk"</td>
             <td style="padding: 12px;">Av. Celil Aktaş</td>
             <td style="padding: 12px;">AVUKAT</td>
-            <td style="padding: 12px;">saat - saat</td>
+            <td style="padding: 12px;">12:40 - 13:20</td>
             <td style="padding: 12px;">Güney Kampüs, ALH</td>
           </tr>
+          <tr style="background-color: #ffffff;">
+            <td style="padding: 12px;">YEMEK MOLASI</td>
+            <td style="padding: 12px;">-</td>
+            <td style="padding: 12px;">-</td>
+            <td style="padding: 12px;">13:20 - 14:20</td>
+            <td style="padding: 12px;">Güney Kampüs, ALH</td>
+          </tr>
+          <tr style="background-color: #ffffff;">
+            <td style="padding: 12px;">"Cloud ve Veri"</td>
+            <td style="padding: 12px;">Mutlu Polatcan - Software Engineer</td>
+            <td style="padding: 12px;">INSIDER</td>
+            <td style="padding: 12px;">14:20 - 15:00</td>
+            <td style="padding: 12px;">Güney Kampüs, ALH</td>
 
-        </tr><tr style="background-color: #ffffff;">
-          <td style="padding: 12px;">Yapay Zeka Çağında Dijital Girişimler</td>
-          <td style="padding: 12px;">Enes Karataş - Founding Engineer</td>
-          <td style="padding: 12px;">UPSONIC</td>
-          <td style="padding: 12px;">saat - saat</td>
-          <td style="padding: 12px;">Güney Kampüs, ALH</td>
-        </tr>            
+
+          </tr>
+          <tr style="background-color: #ffffff;">
+            <td style="padding: 12px;">"Yapay Zeka Çağında Dijital Girişimler"</td>
+            <td style="padding: 12px;">Enes Karataş - Founding Engineer</td>
+            <td style="padding: 12px;">UPSONIC</td>
+            <td style="padding: 12px;">15:00 - 15:40</td>
+            <td style="padding: 12px;">Güney Kampüs, ALH</td>
+          </tr>            
+              <tr style="background-color: #ffffff;">
+                <td style="padding: 12px;">"LLM’lerin Güçlü ve Zayıf Yönleri"</td>
+                  <td style="padding: 12px;">Ahmet Erdem - Senior LLM Technologist</td>
+                  <td style="padding: 12px;">NVIDIA</td>
+                  <td style="padding: 12px;">15:40 - 16:20</td>
+                  <td style="padding: 12px;">Güney Kampüs, ALH</td>
+                </tr>
    
               </tbody>
             </table>
