--- a/program/index.html
+++ b/program/index.html
@@ -265,10 +265,17 @@
             <td style="padding: 12px;">Güney Kampüs, ALH</td>
           </tr>
           <tr style="background-color: #ffffff;">
+            <td style="padding: 12px;">"LLM’lerin Güçlü ve Zayıf Yönleri"</td>
+              <td style="padding: 12px;">Ahmet Erdem - Senior LLM Technologist</td>
+              <td style="padding: 12px;">NVIDIA</td>
+              <td style="padding: 12px;"> - </td>
+              <td style="padding: 12px;">Güney Kampüs, ALH</td>
+            </tr>
+          <tr style="background-color: #ffffff;">
             <td style="padding: 12px;">"Cloud ve Veri"</td>
             <td style="padding: 12px;">Mutlu Polatcan - Software Engineer</td>
             <td style="padding: 12px;">INSIDER</td>
-            <td style="padding: 12px;">14:20 - 15:00</td>
+            <td style="padding: 12px;"> - </td>
             <td style="padding: 12px;">Güney Kampüs, ALH</td>
 
 
@@ -277,16 +284,9 @@
             <td style="padding: 12px;">"Yapay Zeka Çağında Dijital Girişimler"</td>
             <td style="padding: 12px;">Enes Karataş - Founding Engineer</td>
             <td style="padding: 12px;">UPSONIC</td>
-            <td style="padding: 12px;">15:00 - 15:40</td>
+            <td style="padding: 12px;"> - </td>
             <td style="padding: 12px;">Güney Kampüs, ALH</td>
           </tr>            
-              <tr style="background-color: #ffffff;">
-                <td style="padding: 12px;">"LLM’lerin Güçlü ve Zayıf Yönleri"</td>
-                  <td style="padding: 12px;">Ahmet Erdem - Senior LLM Technologist</td>
-                  <td style="padding: 12px;">NVIDIA</td>
-                  <td style="padding: 12px;">15:40 - 16:20</td>
-                  <td style="padding: 12px;">Güney Kampüs, ALH</td>
-                </tr>
    
               </tbody>
             </table>
