--- a/program/index.html
+++ b/program/index.html
@@ -182,7 +182,7 @@
                   <td style="padding: 12px;">Online</td>
                 </tr>
                 <tr style="background-color: #ecf0f1;">
-                  <td style="padding: 12px;">Visual Language Model</td>
+                  <td style="padding: 12px;">Vision Language Model</td>
                   <td style="padding: 12px;">Caner Şahin - AI Development Lead</td>
                   <td style="padding: 12px;">Lyrebird Studio</td>
                   <td style="padding: 12px;">14:45 - 16:15</td>
