--- a/program/index.html
+++ b/program/index.html
@@ -242,6 +242,13 @@
               <td style="padding: 12px;">10:55 - 11:35</td>
               <td style="padding: 12px;">Güney Kampüs, ALH</td>
             </tr>
+          </tr><tr style="background-color: #ffffff;">
+            <td style="padding: 12px;">MOLA</td>
+            <td style="padding: 12px;">-</td>
+            <td style="padding: 12px;">-</td>
+            <td style="padding: 12px;">11:35 - 12:00</td>
+            <td style="padding: 12px;">Güney Kampüs, ALH</td>
+          </tr>
             <tr style="background-color: #ffffff;">
               <td style="padding: 12px;">"Weighted Nearest Centroid Estimator (WNCE)"</td>
               <td style="padding: 12px;">Gursel Karaçor - Akademisyen</td>
@@ -249,6 +256,7 @@
               <td style="padding: 12px;">12:00 - 12:40</td>
               <td style="padding: 12px;">Güney Kampüs, ALH</td>
             </tr>
+            
           </tr>
           <tr style="background-color: #ffffff;">
             <td style="padding: 12px;">"Yapay Zekâ ve Hukuk"</td>
